--- a/styles.scss
+++ b/styles.scss
@@ -115,6 +115,7 @@ h2 {
 }
 .instructions {
     font-family: 'Open-Sans', sans-serif;
+    font-size: 1.5vw;
     display: flex;
     justify-content: center;
     align-items: center;
